# AXIOM-PROTOCOL

./: 2026-BEST-PRACTICES-IMPACT.md  2026-FEATURES-README.md  Cargo.toml  Dockerfile  GITHUB-RELEASE-INSTRUCTIONS.md  IMPLEMENTATION-COMPLETE.md  IMPLEMENTATION_STATUS.md  MAINNET-DEPLOYMENT.md  README.md  README_ACADEMIC.md  RELEASE-COMPLETE.md  SECURITY.md  TECHNICAL_SPEC.md  VALIDATOR-GUIDE.md  ai_stats.json  deploy-all-validators.sh  docker-compose.yml  final-cleanup.sh  network-diagnostics.sh
ai-oracle/: Cargo.toml  README.md
ai-oracle/src/: main.rs
axiom-sdk/: Cargo.toml  README.md
axiom-sdk/src/: client.rs  error.rs  lib.rs  transaction.rs  types.rs  wallet.rs
config/: bootstrap.toml
keys/: verification_key.json
monitoring/: README.md  alertmanager.yml  alerts.yml  docker-compose.yml  prometheus.yml
src/: ai_logic.rs  chain.rs  lib.rs  main.rs  network.rs  vdf.rs  zk.rs
src/privacy/: mod.rs  view_keys.rs
src/sustainability/: energy_benchmark.rs  mod.rs
src/zk/: circuit.rs
tests/: integration_tests.rs  test_integration.rs
zk-setup/: README.md  download-keys.sh
