[package]
name = "axiom-sdk"
version = "1.0.0"
edition = "2021"
authors = ["Axiom Protocol Team <dev@axiom.network>"]
description = "Official Rust SDK for Axiom Protocol - Privacy-First Blockchain"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ghost-84M/Axiom-Protocol"
homepage = "https://axiom.network"
keywords = ["blockchain", "cryptocurrency", "privacy", "zksnark", "axiom"]
categories = ["cryptography", "network-programming"]
readme = "README.md"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
async-trait = "0.1"

# Optional features
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
prometheus = ["dep:prometheus"]

[[example]]
name = "quick_start"
path = "examples/quick_start.rs"

[[example]]
name = "view_keys"
path = "examples/view_keys.rs"
